Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-30706

Crash when enabling QML debugging

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P1: Critical P1: Critical
    • Qt Creator 13.0.1
    • Qt Creator 13.0.0, Qt Creator 13.0.1
    • Debugger
    • Windows 11 23H2
    • 68492d9dc (13.0)

      1. Start Creator with empty settings and open a qmlproject.
        I started it with a test project from Creator's repository using:
        C:\Qt\Tools\QtCreator\bin\qtcreator.exe -tcs C:\Users\rober\dev\src\creator-squish\tests\system\suite_debugger\shared\testdata\simpleQuickUI2\simpleQuickUI2.qmlproject
        
      2. Open "Run Settings" in "Projects" mode.
      3. In "Debugger Settings", select "Enabled" from the combo box for "QML debugger".
        Creator crashes.

      Found and tested by Squish test tst_qml_locals.

        1. stack.png
          116 kB
          Robert Löhning
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            davschul David Schulz
            rlohning Robert Löhning
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes