Debugger: Fix crash on update debugger run configuration details

The old details widget gets deleted and a new one is created after a kit
emits the updated signal. So we need to guard the connect with this
detail widget instead of the aspect container.

Fixes: QTCREATORBUG-30706
Change-Id: I632213cd7d95c2f61b35679867d706b6c587da5a
Reviewed-by: Christian Stenger <christian.stenger@qt.io>